--- a/kocom.conf
+++ b/kocom.conf
@@ -11,7 +11,7 @@
 #type = serial
 #serial_port = /dev/ttyUSB0
 type = socket
-socket_server = 192.168.0.202
+socket_server = 192.168.1.1
 socket_port = 8899
 
 
@@ -25,11 +25,11 @@ socket_port = 8899
 # mqtt_username (required when mqtt_allow_anonymous=False) : mqtt username
 # mqtt_password (required when mqtt_allow_anonymous=False) : mqtt password
 #------------
-mqtt_server = 192.168.0.8
+mqtt_server = 192.168.1.1
 mqtt_port = 1883
 mqtt_allow_anonymous = False
-mqtt_username = 유
-mqtt_password = 91597615
+mqtt_username = 1
+mqtt_password = 9
 
 
 [Device]
